Platform 1.21

* DHE disabled

  We disabled all default-enabled DHE ciphers in both HttpServer and
  JettyHttpClient.

* HttpServer

  We changed the default value of the "http-server.accept-queue-size"
  configuration option to 8000.

Platform 1.20

* TestingHttpClient

  We have deprecated the TestingHttpClient constructors that take a
  Function<Request, Response> in order to remove ambiguity when using
  a lambda. Use the Processor variants instead.

  We have added a TestingHttpClient.setProcessor() method.

* HttpClient

  We renamed the "http-client.read-timeout" configuration option to
  "http-client.idle-timeout".

  We added the "http-client.request-timeout" configuration option.

  We deprecated the unused "http-client.keep-alive-interval" configuration
  option.

* HttpServer

  We added the "http-server.accept-queue-size" configuration option.

* Threads

  Thread factories provided by the Threads utility class now add threads to a
  ThreadGroup.  Some tools organize threads by ThreadGroup which makes it
  easier to work with servers with lots of threads.  The ThreadGroup is named
  using:

    String.format(nameFormat, "group")

  This means the nameFormat must expect a String argument instead of an int.
  To ease migration, the code adapts formats with a single %d, but this may
  be removed in a future release.

* Discovery

  We have added an /admin/stop-announcing resource to the admin port.
  When a PUT request, using Basic authentication with the username and
  password configured as admin-server.username and admin-server.password,
  is sent to this resource then the discovery announcer will revoke all
  announcements and shut down.

  This change adds a dependency from JmxHttpModule to Discovery, which
  might break TestServer. TestServer usually doesn't need JmxHttpModule,
  so it can be removed.

* Logging

  We have replaced use of SLF4J in the logging backend with a custom logging